feat: Enhance app with pull-to-refresh and safe area support
Introduces pull-to-refresh functionality to the home screen and integrates safe area support across various screens. This improves user experience by allowing content to adapt to device notches and dynamic islands, and provides a familiar gesture for data refresh.

The `index.html` has been updated to include `viewport-fit=cover` and `overscroll-behavior-y: none` for better mobile viewport handling. New CSS utility classes `pt-safe` are added for padding top based on safe area insets.

The `HomeScreen.tsx` now implements a pull-to-refresh gesture, allowing users to pull down to refresh the content. This includes state management for the refresh animation and threshold detection.

The `App.tsx` has been updated to apply `pt-safe` to the main header and the connection error screen, ensuring these elements respect safe area insets. It also introduces a `handleRefresh` function to be passed down to `HomeScreen`.

The `ModerationScreen.tsx`, `QuestionDetailScreen.tsx`, and `ShopScreen.tsx` have been updated to apply the `pt-safe` class to their respective sticky headers or banners, ensuring consistent safe area adaptation. The `ModerationScreen` also adjusts its sticky tab bar to account for safe area insets.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-TW">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
     <title>電子三乙功課系統</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.css">
@@ -55,10 +55,19 @@
 
       body {
         background-color: #f3f4f6;
+        overscroll-behavior-y: none; /* Prevent native pull-to-refresh on some browsers to use ours */
       }
       .dark body {
         background-color: #111827;
       }
+
+      /* Safe Area Utility */
+      .pt-safe {
+        padding-top: env(safe-area-inset-top, 20px);
+      }
+      /* For sticky headers, we need to include the safe area in the top position if strictly needed, 
+         but usually padding is enough. If sticky top-0 is used, top-0 is relative to viewport.
+      */
     </style>
 <script type="importmap">
 {
