feat: Add check-in system
Introduces a new check-in feature to the application, allowing users to track daily participation and build streaks.

This involves:
- Updating user types to include `lastCheckInDate` and `checkInStreak`.
- Modifying the `HomeScreen` to potentially display check-in status or entry points.
- Adding a `CheckInModal` component for the check-in interface.
- Implementing check-in logic in `App.tsx` to handle daily check-ins, streak calculation, and potential rewards.
- Enhancing `ProfileScreen` to display check-in history and streak information.
- Updating `LeaderboardScreen` to include icons and visual cues for user activity.
- Adjusting CSS for safe area padding in `index.html` to improve mobile UI consistency.

--- a/index.html
+++ b/index.html
@@ -63,11 +63,9 @@
 
       /* Safe Area Utility */
       .pt-safe {
-        padding-top: env(safe-area-inset-top, 20px);
+        /* Ensure a minimum padding of 24px + any safe area inset */
+        padding-top: calc(env(safe-area-inset-top, 0px) + 24px);
       }
-      /* For sticky headers, we need to include the safe area in the top position if strictly needed, 
-         but usually padding is enough. If sticky top-0 is used, top-0 is relative to viewport.
-      */
     </style>
 <script type="importmap">
 {
